--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,16 @@
-name: KPO
-description: A web app that uses AngularDart Components
+name: darts2
+description: A simple StageXL web app.
 # version: 1.0.0
-# homepage: https://www.example.com
-# author: nxf19259 <email@example.com>
+#homepage: https://www.example.com
+#author: Stala <email@example.com>
 
 environment:
   sdk: '>=2.1.0 <3.0.0'
 
 dependencies:
-  angular: ^5.2.0
-  angular_components: ^0.11.0
+  stagexl: ^1.1.0
 
 dev_dependencies:
-  angular_test: ^2.2.0
   build_runner: ^1.1.2
-  build_test: ^0.10.3
   build_web_compilers: ^1.0.0
   pedantic: ^1.0.0
-  test: ^1.5.1
